# ginger-code

./: .gitignore  Cargo.toml  Info.gui.plist  Info.plist  README.md  bundle-gui.sh  bundle.sh  services.toml
.ginger.tmp/: IAMService@ginger-society.prod.spec.json  MetadataService@ginger-society.prod.spec.json
src/: main.rs  tray.rs
src/shared/: mod.rs
src/shared/gui/: app.rs  bg.rs  colors.rs  mod.rs  panels.rs  terminal.rs  types.rs
src/shared/gui/panels/: infostrip.rs  logspane.rs  mod.rs  sidebar.rs  statusbar.rs  tabbar.rs  terminalpane.rs  titlebar.rs
src/shared/ui/: eject.rs  kubernetes.rs  mod.rs  popup.rs  render.rs  types.rs
