[package]
name = "ginger-code"
version = "0.1.0"
edition = "2021"
default-run = "ginger-code-cli"

[[bin]]
name = "ginger-code"
path = "src/main.rs"

[[bin]]
name = "ginger-code-cli"
path = "src/bin/cli.rs"

[dependencies]
serde       = { version = "=1.0.193", features = ["derive"] }
toml        = "=0.7.8"
serde_json  = "=1.0.108"
indexmap    = "=2.1.0"
libc        = "=0.2.153"
clap        = { version = "=4.4.18", features = ["derive"] }