[package]
name = "ginger-code"
version = "0.1.0"
edition = "2021"
default-run = "ginger-code-cli"
description = "ginger code "


[[bin]]
name = "ginger-code"
path = "src/main.rs"

[[bin]]
name = "ginger-code-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "ginger-code-gui"
path = "src/bin/gui.rs"

[dependencies]
serde       = { version = "=1.0.193", features = ["derive"] }
toml        = "=0.7.8"
serde_json  = "=1.0.108"
indexmap    = "=2.1.0"
libc        = "=0.2.153"
clap        = { version = "=4.4.18", features = ["derive"] }
MetadataService = { path = "./MetadataService_client" }
ginger-shared-rs = {version = "0.51.0-nightly.0", organization = "ginger-society"}
IAMService = { path = "./IAMService_client" }
tokio = {version = "1", features = ["full"]}
ratatui = "0.26"
crossterm = "0.27"
dirs = "6.0.0"
tray-icon = "0.19"          # cross-platform tray icon (Windows, macOS, Linux/GTK)
resvg    = "0.44"
winit = { version = "0.30", features = [] }
eframe        = { version = "0.27", features = ["default"] }
egui          = "0.27"
portable-pty  = "0.8"
vte           = "0.13"
parking_lot   = "0.12"

[package.metadata]
organization = "ginger-society"

[package.metadata.bundle]
osx_minimum_system_version = "11.0"
